fix overflow bug

--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@
 body {
     font-family: Noto Sans, sans-serif;
     background-color: #f6f8fa;
-    
 }
+
+html, body {
+  overflow-x: hidden;
+}
+
 
 /* Start Nav */
 .nav {
